<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label" translatable="false">PLUA Cards</string>
    <string name="importing">Updating database</string>
    <string name="add_word_title">Add word</string>
    <string name="save">Save</string>
    <string name="type_error">Can\'t be empty</string>
    <string name="polish">Polish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="delete">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_word_title">Edit word</string>
    <string name="forgot">Forgot</string>
    <string name="reload">Reload</string>
    <string name="remember">Recalled</string>
    <string name="help"><![CDATA[Help & feedback]]></string>
    <string name="help_title">Help</string>
    <string name="help_description">Read how to use application.</string>
    <string name="rate_title">Rate</string>
    <string name="rate_description">Rate application and leave comment on Play store.</string>
    <string name="feedback_title">Send feedback</string>
    <string name="feedback_description">Found problem or have a suggestion? Send email.</string>
    <string name="about_title">About</string>
    <string name="about_description">Read more information about application.</string>
    <string name="send_feedback">mailto:maxim.dybarskyy@gmail.com?subject=Words : Feedback</string>
    <string name="rate">market://details?id=</string>
    <string name="rate_web">http://play.google.com/store/apps/details?id=</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="saving_error">Word exists</string>
    <string name="no_words">No words to display</string>
    <string name="no_words2">Press + button to add a word</string>
</resources>