<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>

    <item android:id="@+id/reload"
        android:icon="@drawable/ic_refresh"
        android:title="@string/reload"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>

    <item android:id="@+id/about"
        android:title="@string/help"
        app:showAsAction="never"
        android:orderInCategory="4"/>

</menu>